generate random praise

--- a/resources/sidebar.html
+++ b/resources/sidebar.html
@@ -27,7 +27,7 @@
   <script>
     const vscode = acquireVsCodeApi();
     document.getElementById('poopButton').onclick = function() {
-      vscode.postMessage({ command: 'praisePooped', data: '🏆 You’ve joined the prestigious League of Daily Poopers! 💩' });
+      vscode.postMessage({ command: 'praisePooped', data: {} });
     };
   </script>
 </body>
